samples/_failures_safe/1761245784_98ad46_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9bb42c1.c: In function ‘update_stats’:
./samples/SAFE/__tmp_a9bb42c1.c:136:13: error: expected expression at end of input
  136 |             case
      |             ^~~~
./samples/SAFE/__tmp_a9bb42c1.c:136:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a9bb42c1.c:136:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a9bb42c1.c:136:13: error: expected declaration or statement at end of input
